--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,12 @@
 {
+    "hero-title": "Training",
+    "hero-subtitle-1": "makes you",
+    "hero-subtitle-2": "strong",
+    "hero-button-text": "Change your life!",
+    "nav-landing-1": "Your future",
+    "nav-landing-2": "Benefits",
+    "nav-landing-3": "Features",
+    "nav-landing-4": "Testimonials",
     "feature-1-title": "Streamline your fitness journey right from home",
     "feature-1-description": "Trackoverload transforms home workouts with efficient progress tracking - helping you stay motivated and excel at your fitness journey, effortlessly and at no cost."
 }
