--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,4 +1,12 @@
 {
+    "hero-title": "Entrenar",
+    "hero-subtitle-1": "desata tu",
+    "hero-subtitle-2": "fortaleza",
+    "hero-button-text": "¡Cambia tu vida!",
+    "nav-landing-1": "Tu futuro",
+    "nav-landing-2": "Beneficios",
+    "nav-landing-3": "Características",
+    "nav-landing-4": "Testimonios",
     "feature-1-title": "Optimiza tu viaje de fitness desde casa",
     "feature-1-description": "Trackoverload transforma los entrenamientos en casa con un seguimiento eficiente del progreso, ayudándote a mantenerte motivado y a sobresalir en tu viaje de fitness, sin esfuerzo y sin costo."
 }
