Implementing features section, Changed grey colors

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,11 +2,23 @@
     "hero-title": "Training",
     "hero-subtitle-1": "makes you",
     "hero-subtitle-2": "strong",
-    "hero-button-text": "Change your life!",
+    "hero-button-text": "Improve your life!",
     "nav-landing-1": "Your future",
     "nav-landing-2": "Benefits",
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
-    "feature-1-title": "Streamline your fitness journey right from home",
-    "feature-1-description": "Trackoverload transforms home workouts with efficient progress tracking - helping you stay motivated and excel at your fitness journey, effortlessly and at no cost."
+    "feature-1-title": "Rest more than exercise",
+    "feature-1-description": "DESCRIPTION 1 HERE",
+    "feature-2-title": "See your progress from 2nd week",
+    "feature-2-description": " DESCRIPTION 2 HERE",
+    "feature-3-title": "Simple and tested free workouts",
+    "feature-3-description": " DESCRIPTION 3 HERE",
+    "feature-4-title": "Healthier and happier life",
+    "feature-4-description": " DESCRIPTION 4 HERE",
+    "feature-5-title": "Increase your confidence",
+    "feature-5-description": "  DESCRIPTION 5 HERE",
+    "feature-6-title": "Demand respect from others",
+    "feature-6-description": " DESCRIPTION 6 HERE",
+    "feature-7-title": "Make it your own",
+    "feature-7-description": " DESCRIPTION 7 HERE"
 }
