--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -2,11 +2,23 @@
     "hero-title": "Entrenar",
     "hero-subtitle-1": "desata tu",
     "hero-subtitle-2": "fortaleza",
-    "hero-button-text": "¡Cambia tu vida!",
+    "hero-button-text": "¡Mejora tu vida!",
     "nav-landing-1": "Tu futuro",
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
-    "feature-1-title": "Optimiza tu viaje de fitness desde casa",
-    "feature-1-description": "Trackoverload transforma los entrenamientos en casa con un seguimiento eficiente del progreso, ayudándote a mantenerte motivado y a sobresalir en tu viaje de fitness, sin esfuerzo y sin costo."
+    "feature-1-title": "Descansa más que haz ejercicio",
+    "feature-1-description": "DESCRIPCIÓN 1 AQUÍ",
+    "feature-2-title": "Ve tu progreso desde la 2da semana",
+    "feature-2-description": " DESCRIPCIÓN 2 AQUÍ",
+    "feature-3-title": "Entrenamientos gratuitos simples y probados",
+    "feature-3-description": " DESCRIPCIÓN 3 AQUÍ",
+    "feature-4-title": "Vida más saludable y feliz",
+    "feature-4-description": " DESCRIPCIÓN 4 AQUÍ",
+    "feature-5-title": "Aumenta tu confianza",
+    "feature-5-description": " DESCRIPCIÓN 5 AQUÍ",
+    "feature-6-title": "Gana respeto de los demás",
+    "feature-6-description": " DESCRIPCIÓN 6 AQUÍ",
+    "feature-7-title": "Hazlo tuyo",
+    "feature-7-description": " DESCRIPCIÓN 7 AQUÍ"
 }
