--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -20,5 +20,17 @@
     "feature-6-title": "Gana respeto de los demás",
     "feature-6-description": " DESCRIPCIÓN 6 AQUÍ",
     "feature-7-title": "Hazlo tuyo",
-    "feature-7-description": " DESCRIPCIÓN 7 AQUÍ"
+    "feature-7-description": " DESCRIPCIÓN 7 AQUÍ",
+    "benefit-1-title": "Entrena",
+    "benefit-1-items": "objeto 1",
+    "benefit-1-cta": "llamada a la acción 1",
+    "benefit-2-title": "Rastrea",
+    "benefit-2-items": "objeto 2",
+    "benefit-2-cta": "llamada a la acción 2",
+    "benefit-3-title": "Mejora",
+    "benefit-3-items": "objeto 3",
+    "benefit-3-cta": "llamada a la acción 3",
+    "benefit-4-title": "¡Vive!",
+    "benefit-4-items": "objeto 4",
+    "benefit-4-cta": "llamada a la acción 4"
 }
