Fixed benefits layout. Styled back side. Added text to back side.

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -22,15 +22,15 @@
     "feature-7-title": "Hazlo tuyo",
     "feature-7-description": " DESCRIPCIÓN 7 AQUÍ",
     "benefit-1-title": "Entrena",
-    "benefit-1-items": "objeto 1",
-    "benefit-1-cta": "llamada a la acción 1",
+    "benefit-1-items": "Dale a tu cuerpo lo que necesita;Entrenamientos gratuitos probados;Simple para evitar tomar decisiones",
+    "benefit-1-cta": "¡Empieza ahpora mismo!",
     "benefit-2-title": "Rastrea",
-    "benefit-2-items": "objeto 2",
-    "benefit-2-cta": "llamada a la acción 2",
+    "benefit-2-items": " Rastrea peso ...; Rastrea repeticiones ...; Y observa tu progreso",
+    "benefit-2-cta": " ¡Monitoriza tu desarrollo!",
     "benefit-3-title": "Mejora",
-    "benefit-3-items": "objeto 3",
-    "benefit-3-cta": "llamada a la acción 3",
+    "benefit-3-items": " 1ra semana: línea base; 2da semana+: ve progreso; los datos no mienten",
+    "benefit-3-cta": " ¡Vuélvete más fuerte!",
     "benefit-4-title": "¡Vive!",
-    "benefit-4-items": "objeto 4",
-    "benefit-4-cta": "llamada a la acción 4"
+    "benefit-4-items": " Más saludable, más fuerte, más confiado; Resultados más allá de lo estético; Afecta positivamente a los demás",
+    "benefit-4-cta": " ¡Obtén superpoderes!"
 }
