--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -22,15 +22,15 @@
     "feature-7-title": "Make it your own",
     "feature-7-description": " DESCRIPTION 7 HERE",
     "benefit-1-title": "Train",
-    "benefit-1-items": "item 1",
-    "benefit-1-cta": "cta 1",
+    "benefit-1-items": "Give your body what it needs;Tested free workouts;Simple to avoid decision making",
+    "benefit-1-cta": "Start right now!",
     "benefit-2-title": "Track",
-    "benefit-2-items": "item 2",
-    "benefit-2-cta": "cta 2",
+    "benefit-2-items": "Track weight ...; Track reps ...;And observe your progress",
+    "benefit-2-cta": "Monitor your development!",
     "benefit-3-title": "Improve",
-    "benefit-3-items": "item 3",
-    "benefit-3-cta": "cta 3",
+    "benefit-3-items": "1st week: baseline; 2nd week+: see progress; data doesn't lie",
+    "benefit-3-cta": "Become stronger!",
     "benefit-4-title": "Enjoy!",
-    "benefit-4-items": "item 4",
-    "benefit-4-cta": "cta 4"
+    "benefit-4-items": "Healthier, stronger, more confident;Results beyond aesthetic;Affect others positively",
+    "benefit-4-cta": "Gain superpowers!"
 }
