Initial text for features section.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,19 +8,19 @@
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
     "feature-1-title": "Rest more than exercise",
-    "feature-1-description": "DESCRIPTION 1 HERE",
+    "feature-1-description": "Science sais that rest is crucial for muscle growth. Different studies suggest rest times of 1 - 5 minutes between sets. Choose the most suitable for you.",
     "feature-2-title": "See your progress from 2nd week",
-    "feature-2-description": " DESCRIPTION 2 HERE",
+    "feature-2-description": "One of the main reasons people quit is because they don't see results. Tracking your progress is essential to know you're in the right path. It ensures you're getting closer to your goal.",
     "feature-3-title": "Simple and tested free workouts",
-    "feature-3-description": " DESCRIPTION 3 HERE",
+    "feature-3-description": "Free workouts designed to be performed at home. Little equipment needed. Optimized for strenghten the whole body and take the least amount of time possible.",
     "feature-4-title": "Healthier and happier life",
-    "feature-4-description": " DESCRIPTION 4 HERE",
+    "feature-4-description": " The benefits you get from exercising and taking care of yourself are not only physical. They affect all areas of your life. You'll have better health, be in a better mood and have better relationships.",
     "feature-5-title": "Increase your confidence",
-    "feature-5-description": "  DESCRIPTION 5 HERE",
+    "feature-5-description": " When you start your fitness journey, you're breaking mental barriers. You know what you want and you go for it. By improving a little in each session you feel more capable of fulfilling any desire.",
     "feature-6-title": "Demand respect from others",
-    "feature-6-description": " DESCRIPTION 6 HERE",
-    "feature-7-title": "Make it your own",
-    "feature-7-description": " DESCRIPTION 7 HERE",
+    "feature-6-description": " You'll be perceived by others as someone who takes care of themselves and is in control of their life. They'll see you better, treat you better and respect you more.",
+    "feature-7-title": "Make it YOURS",
+    "feature-7-description": " When you feel comfortable with your new life, the pro version allows you to expand the exercises and create your own routines. Adapt the training to your particular needs and take control!",
     "benefit-1-title": "Train",
     "benefit-1-items": "Give your body what it needs;Tested free workouts;Simple to avoid decision making",
     "benefit-1-cta": "Start right now!",
