--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -7,25 +7,25 @@
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
-    "feature-1-title": "Descansa más que haz ejercicio",
-    "feature-1-description": "DESCRIPCIÓN 1 AQUÍ",
+    "feature-1-title": "Más tiempo de descanso que de ejercicio",
+    "feature-1-description": " La ciencia dice que el descanso es crucial para el crecimiento muscular. Diferentes estudios sugieren tiempos de descanso de 1 - 5 minutos entre series. Elige el más adecuado para ti.",
     "feature-2-title": "Ve tu progreso desde la 2da semana",
-    "feature-2-description": " DESCRIPCIÓN 2 AQUÍ",
+    "feature-2-description": " Una de las principales razones por las que la gente abandona es porque no ve resultados. Medir tu progreso es esencial para saber que estás en el camino correcto. Te asegura que te estás acercando a tu objetivo.",
     "feature-3-title": "Entrenamientos gratuitos simples y probados",
-    "feature-3-description": " DESCRIPCIÓN 3 AQUÍ",
+    "feature-3-description": " Entrenamientos gratuitos diseñados para ser realizados en casa. Poco equipo necesario. Optimizados para fortalecer todo el cuerpo y tomar la menor cantidad de tiempo posible.",
     "feature-4-title": "Vida más saludable y feliz",
-    "feature-4-description": " DESCRIPCIÓN 4 AQUÍ",
+    "feature-4-description": "Los beneficios que obtienes al hacer ejercicio y cuidarte no son sólo físicos. Afectan a todos los ámbitos de tu vida. Tendrás mejor salud, estarás de mejor humor y tendrás mejores relaciones.",
     "feature-5-title": "Aumenta tu confianza",
-    "feature-5-description": " DESCRIPCIÓN 5 AQUÍ",
+    "feature-5-description": "Cuando empiezas tu camino en el fitness, estás rompiendo barreras mentales. Sabes lo que quieres y te lanzas a conseguirlo. Al mejorar un poco en cada sesión te sientes más capaz de cumplir cualquier deseo.",
     "feature-6-title": "Gana respeto de los demás",
-    "feature-6-description": " DESCRIPCIÓN 6 AQUÍ",
-    "feature-7-title": "Hazlo tuyo",
-    "feature-7-description": " DESCRIPCIÓN 7 AQUÍ",
+    "feature-6-description": "Serás percibido por los demás como alguien que se cuida y que está en control de su vida. Te verán mejor, te tratarán mejor y serás más respetado.",
+    "feature-7-title": "Hazlo TUYO",
+    "feature-7-description": "Cuando te sientas cómodo con tu nueva vida, la versión pro te permite expandir los ejercicios y crear tus propias rutinas. ¡Adapta el entrenamieto a tus necesidades particulares y toma el control!",
     "benefit-1-title": "Entrena",
     "benefit-1-items": "Dale a tu cuerpo lo que necesita;Entrenamientos gratuitos probados;Simple para evitar tomar decisiones",
     "benefit-1-cta": "¡Empieza ahpora mismo!",
-    "benefit-2-title": "Rastrea",
-    "benefit-2-items": " Rastrea peso ...; Rastrea repeticiones ...; Y observa tu progreso",
+    "benefit-2-title": "Mide",
+    "benefit-2-items": " Mide peso ...; Mide repeticiones ...; Y observa tu progreso",
     "benefit-2-cta": " ¡Monitoriza tu desarrollo!",
     "benefit-3-title": "Mejora",
     "benefit-3-items": " 1ra semana: línea base; 2da semana+: ve progreso; los datos no mienten",
