Started niche section

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,11 @@
     "nav-landing-2": "Benefits",
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
+    "niche-section-title": "In few months...",
+    "niche-1-title": "You're going to love yourself",
+    "niche-1-text": " It's time to leave fear and insecurity behind. You are capable of getting the life you want and you are going to prove it. This is not the first time you think about leading a healthier life, it's not even the first time you try. But there's always something that has stood in your way when it comes to following through: laziness, lack of time, even what others will say. A reason that is not usually talked about when starting a healthier and happier life is the fear of the criticism we will receive. Fear that others will perceive that we want to be better and happier! The first step to improve is to accept that we have a problem, whatever it is. You have to know that I support you. You are not alone, many of us have been there before. Whatever doubts you have, you can handle it all. I am proud that you have decided to take action towards a better life. In a few months you will thank yourself.",
+    "niche-2-title": " Discipline will no longer be a problem",
+    "niche-2-text": " One of the reasons why it is difficult to stay disciplined when following a routine is because we want immediate results and feel that our work is useless. We start with many videos with many different routines that we find by searching on Youtube, Instagram or Google. They tell us some fixed weights and repetitions that, most likely, do not adapt to our ideal situation. Either it is very demanding for us, or it does not challenge us enough. The optimal is to increase the work done a little in each session. This way we can see that, with each workout, we improve and get closer to our goal. This makes the path easier to travel.",
     "features-section-title": "You execute, we guarantee...",
     "feature-1-title": "More rest than exercise",
     "feature-1-description": "Science sais that rest is crucial for muscle growth. Different studies suggest rest times of 1 - 5 minutes between sets. Choose the most suitable for you.",
