--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -7,7 +7,7 @@
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
-    "niche-section-title": " En pocos meses...",
+    "niche-section-title": " En unos pocos meses...",
     "niche-1-title": "Te vas a querer",
     "niche-1-text": "Es hora de dejar atrás el miedo y la inseguridad. Eres capaz de conseguir la vida que quieres y te lo vas a demostrar. Esta no es la primera vez que piensas en llevar una vida más sana, incluso tampoco es la primera vez que lo intentas. Pero siempre hay algo que se ha interpuesto en tu camino a la hora de seguir: pereza, falta de tiempo, hasta el qué dirán. Un motivo del que no se suele hablar a la hora de empezar con una vida más sana y feliz es el miedo a las críticas que recibiremos. ¡Miedo a que otros perciban que queremos ser mejores y más felices!. El primer paso para mejorar es aceptar que tenemos un problema, sea cual sea. Tienes que saber que te apoyo. No estás solo, muchos hemos estado antes ahí. Tengas las dudas que tengas, puedes con todo. Estoy orgulloso de que hayas decidido tomar acción hacia una vida mejor. Dentro de unos meses te lo agradecerás.",
     "niche-2-title": "La disciplina ya no será un problema",
