Turning niche-msg components into list with explanations on hover

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,11 +7,25 @@
     "nav-landing-2": "Benefits",
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
-    "niche-section-title": "In a few months...",
-    "niche-1-title": "You're going to love yourself",
-    "niche-1-text": " It's time to leave fear and insecurity behind. You are capable of getting the life you want and you are going to prove it. This is not the first time you think about leading a healthier life, it's not even the first time you try. But there's always something that has stood in your way when it comes to following through: laziness, lack of time, even what others will say. A reason that is not usually talked about when starting a healthier and happier life is the fear of the criticism we will receive. Fear that others will perceive that we want to be better and happier! The first step to improve is to accept that we have a problem, whatever it is. You have to know that I support you. You are not alone, many of us have been there before. Whatever doubts you have, you can handle it all. I am proud that you have decided to take action towards a better life. In a few months you will thank yourself.",
-    "niche-2-title": " Discipline will no longer be a problem",
-    "niche-2-text": " One of the reasons why it is difficult to stay disciplined when following a routine is because we want immediate results and feel that our work is useless. We start with many videos with many different routines that we find by searching on Youtube, Instagram or Google. They tell us some fixed weights and repetitions that, most likely, do not adapt to our ideal situation. Either it is very demanding for us, or it does not challenge us enough. The optimal is to increase the work done a little in each session. This way we can see that, with each workout, we improve and get closer to our goal. This makes the path easier to travel.",
+    "niche-section-title": "Your mindset",
+    "niche-1-title": " Guaranteed results if ...",
+    "niche-1-reason-1": " You're willing to leave excuses behind.",
+    "niche-1-explanation-1": " The definition of insanity is doing the same thing over and over and expecting different results. We are what we do, and if we want change, we have to change our actions.",
+    "niche-1-reason-2": " You feel you deserve a better life.",
+    "niche-1-explanation-2": " You've been feeling dissatisfied with yourself long enough and you know it's time to take action. Training and taking care of yourself is one of the best investments you're going to make in your life. Starting to work on your body and treating it with the respect it deserves is a big step towards a fulfilling life.",
+    "niche-1-reason-3": " You want your insecurity not to limit you",
+    "niche-1-explanation-3": " Feeling insecure is something normal and that happens to all of us with some area in our life. By taking the reins of our health, we are proving to ourselves that we are capable of doing what is good for us. This simple fact expands to the rest of the areas of our lives, giving us the confidence to do things that we previously considered impossible for us.",
+    "niche-1-reason-4": " You value a system that guarantees progress",
+    "niche-1-explanation-4": " Anything that can be measured can be improved. Achieving your fitness goals is not only not different, but it's simple if you know how to do it. You just have to train a little harder in each session, eat correctly and rest well. Trackoverload facilitates the measurement process so you can clearly see how you're progressing.",
+    "niche-2-title": "You'll change your mind if ...",
+    "niche-2-reason-1": "Your beliefs limit you",
+    "niche-2-explanation-1": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-2": " Inside you feel this is not for you",
+    "niche-2-explanation-2": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-3": " You've tried before and failed",
+    "niche-2-explanation-3": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-4": " You think you're not capable",
+    "niche-2-explanation-4": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
     "features-section-title": "You execute, we guarantee...",
     "feature-1-title": "More rest than exercise",
     "feature-1-description": "Science sais that rest is crucial for muscle growth. Different studies suggest rest times of 1 - 5 minutes between sets. Choose the most suitable for you.",
