--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -7,11 +7,25 @@
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
-    "niche-section-title": " En unos pocos meses...",
-    "niche-1-title": "Te vas a querer",
-    "niche-1-text": "Es hora de dejar atrás el miedo y la inseguridad. Eres capaz de conseguir la vida que quieres y te lo vas a demostrar. Esta no es la primera vez que piensas en llevar una vida más sana, incluso tampoco es la primera vez que lo intentas. Pero siempre hay algo que se ha interpuesto en tu camino a la hora de seguir: pereza, falta de tiempo, hasta el qué dirán. Un motivo del que no se suele hablar a la hora de empezar con una vida más sana y feliz es el miedo a las críticas que recibiremos. ¡Miedo a que otros perciban que queremos ser mejores y más felices!. El primer paso para mejorar es aceptar que tenemos un problema, sea cual sea. Tienes que saber que te apoyo. No estás solo, muchos hemos estado antes ahí. Tengas las dudas que tengas, puedes con todo. Estoy orgulloso de que hayas decidido tomar acción hacia una vida mejor. Dentro de unos meses te lo agradecerás.",
-    "niche-2-title": "La disciplina ya no será un problema",
-    "niche-2-text": "Uno de los motivos por los que cuesta mantenerse disciplinado a la hora de seguir una rutina es porque queremos resultados inmediatos y sentimos que nuestro trabajo no sirve para nada. Empezamos con muchos vídeos con muchas rutinas diferentes que encontramos buscando en Youtube, Instagram o Google. Nos dicen unos pesos y unas repeticiones fijas que, lo más probable, es que no se adapten a nuestra situación ideal. Bien es muy exigente para nosotros, o bien no nos reta lo suficiente. Lo óptimo es incrementar el trabajo realizado un poco en cada sesión. De esta forma podemos ver que, con cada entrenamiento, mejoramos y nos acercamos más a nuestro objetivo. Esto hace el camino más fácil de recorrer.",
+    "niche-section-title": "Tu mentalidad",
+    "niche-1-title": "Resultados asegurados si ...",
+    "niche-1-reason-1": "Estás dispuesto a dejar las excusas atrás.",
+    "niche-1-explanation-1": "La definición de locura es hacer lo mismo una vez tras otra y esperar resultados diferentes. Somos lo que hacemos, y si queremos cambio, tenemos que cambiar nuestras acciones.",
+    "niche-1-reason-2": "Sientes que te mereces una vida mejor. ",
+    "niche-1-explanation-2": "Llevas el tiempo suficiente sintiéndote insatisfecho contigo mismo y sabes que ha llegado el momento de tomar acción. El entrenar y cuidarte es una de las mejores inversiones que vas a hacer en tu vida. Empezar a trabajar en tu cuerpo y tratarlo con el respeto que se merece es un gran paso hacia una vida plena.",
+    "niche-1-reason-3": "Quieres que tu inseguridad no te limite",
+    "niche-1-explanation-3": "Sentirse inseguro es algo normal y que nos pasa a todos con algún ámbito en nuestra vida. Al tomar las riendas de nuestra salud, nos estamos demostrando a nosotros mismos que somos capaces de hacer lo que es bueno para nosotros. Este simple hecho se expande al resto de ámbitos de nuestras vidas, dándonos la confianza para hacer cosas que antes considerábamos imposibles para nosotros.",
+    "niche-1-reason-4": "Valoras un sistema que garantice progreso",
+    "niche-1-explanation-4": "Cualquier cosa que se puede medir se puede mejorar. Alcanzar tus objetivos fitness no sólo no es diferente, sino que es sencillo si sabes cómo hacerlo. Simplemente hay que entrenar un poco más duro en cada sesión, comer de forma correcta y descansar bien. Trackoverload te facilita el proceso de medición para que veas claramente cómo avanzas.",
+    "niche-2-title": "Cambiarás de opinión si ...",
+    "niche-2-reason-1": "Tus creencias te limitan",
+    "niche-2-explanation-1": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-2": "Dentro de ti sientes que esto no es para ti",
+    "niche-2-explanation-2": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-3": "Ya lo has intentado antes y has fallado",
+    "niche-2-explanation-3": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-4": "Crees que no eres capaz",
+    "niche-2-explanation-4": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
     "features-section-title": " Tú ejecutas, nosotros garantizamos...",
     "feature-1-title": "Más tiempo de descanso que de ejercicio",
     "feature-1-description": " La ciencia dice que el descanso es crucial para el crecimiento muscular. Diferentes estudios sugieren tiempos de descanso de 1 - 5 minutos entre series. Elige el más adecuado para ti.",
