First iteration of niche section finished

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -18,14 +18,14 @@
     "niche-1-reason-4": "Valoras un sistema que garantice progreso",
     "niche-1-explanation-4": "Cualquier cosa que se puede medir se puede mejorar. Alcanzar tus objetivos fitness no sólo no es diferente, sino que es sencillo si sabes cómo hacerlo. Simplemente hay que entrenar un poco más duro en cada sesión, comer de forma correcta y descansar bien. Trackoverload te facilita el proceso de medición para que veas claramente cómo avanzas.",
     "niche-2-title": "Cambiarás de opinión si ...",
-    "niche-2-reason-1": "Tus creencias te limitan",
-    "niche-2-explanation-1": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-1": "Tienes miedo del juicio de la gente",
+    "niche-2-explanation-1": "Las críticas que creemos que podemos recibir de nuestro entorno cercano pueden limitar nuestra capacidad de tomar acción. Si tenemos una autoestima baja, podemos percibir que la gente se va a reír de nosotros por querer cambiar nuestra situación. Puede que incluso nos dé vergüenza admitir que queremos vernos en forma o perder unos kilos. No hay que avergonzarse por ello, querer verse lo mejor posible está en la naturaleza humana.",
     "niche-2-reason-2": "Dentro de ti sientes que esto no es para ti",
-    "niche-2-explanation-2": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-explanation-2": "Existe la creencia de que la gente que hace ejercicio simplemente lo hace porque es superficial y quiere presumir. En realidad, el ejercicio es una parte importantísima para una buena salud en cualquier persona. Además, tiene efectos positivos para la salud mental y nos ayuda a mantener una mejor calidad de vida durante muchos años. Por último, no es necesario dedicarle una gran cantidad de tiempo a la semana para tener sus beneficios.",
     "niche-2-reason-3": "Ya lo has intentado antes y has fallado",
-    "niche-2-explanation-3": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
-    "niche-2-reason-4": "Crees que no eres capaz",
-    "niche-2-explanation-4": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-explanation-3": "Uno de los mayores motivos por los que se deja de entrenar es el no ver resultados de forma inmediata. La clave para ser consistente está en medir todas las victorias que hacemos. Hacer siempre una repetición más que en el entrenamiento anterior o subir un poco el peso es progreso que puede ver fácilmente. La clave para el éxito está en seguir de forma consistente un sistema que funciona.",
+    "niche-2-reason-4": "Crees que no eres capaz de conseguir un cambio.",
+    "niche-2-explanation-4": "Deseas ponerte a entrenar, incluso has investigado al respecto y conoces sus beneficios, pero piensas que es un trabajo demasiado duro para ti. Aquí el secreto está en adaptar las rutinas a ti, no en adaptarte tú a las rutinas. Muchas veces vemos que nos dan un número fijo de repeticiones o de peso a utilizar que, simplemente, para nosotros puede ser demasiado. Tenemos que jugar dentro de un rango que nos desafíe y haga crecer, pero que no nos haga sentir miserables.",
     "features-section-title": " Tú ejecutas, nosotros garantizamos...",
     "feature-1-title": "Más tiempo de descanso que de ejercicio",
     "feature-1-description": " La ciencia dice que el descanso es crucial para el crecimiento muscular. Diferentes estudios sugieren tiempos de descanso de 1 - 5 minutos entre series. Elige el más adecuado para ti.",
