--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,14 +18,14 @@
     "niche-1-reason-4": " You value a system that guarantees progress",
     "niche-1-explanation-4": " Anything that can be measured can be improved. Achieving your fitness goals is not only not different, but it's simple if you know how to do it. You just have to train a little harder in each session, eat correctly and rest well. Trackoverload facilitates the measurement process so you can clearly see how you're progressing.",
     "niche-2-title": "You'll change your mind if ...",
-    "niche-2-reason-1": "Your beliefs limit you",
-    "niche-2-explanation-1": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
-    "niche-2-reason-2": " Inside you feel this is not for you",
-    "niche-2-explanation-2": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
-    "niche-2-reason-3": " You've tried before and failed",
-    "niche-2-explanation-3": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
-    "niche-2-reason-4": " You think you're not capable",
-    "niche-2-explanation-4": "WRITEESCRIBIR ESTA THIS RAZÓNREASON",
+    "niche-2-reason-1": " You're afraid of people's judgment",
+    "niche-2-explanation-1": " The criticisms we believe we can receive from our close environment can limit our ability to take action. If we have low self-esteem, we may perceive that people are going to laugh at us for wanting to change our situation. It may even be embarrassing to admit that we want to look fit or lose a few pounds. There's no need to be ashamed of it, wanting to look your best is in human nature.",
+    "niche-2-reason-2": "Deep inside you feel this is not for you",
+    "niche-2-explanation-2": " There's a belief that people who exercise simply do it because they're superficial and want to show off. In reality, exercise is an important part of good health in anyone. In addition, it has positive effects on mental health and helps us maintain a better quality of life for many years. Lastly, it's not necessary to dedicate a large amount of time per week to have its benefits.",
+    "niche-2-reason-3": " You've tried before and always failed",
+    "niche-2-explanation-3": " One of the biggest reasons people stop training is not seeing results immediately. The key to being consistent is to measure all the victories we make. Always doing one more repetition than in the previous workout or lifting a little more weight is progress that can be easily seen. The key to success is to consistently follow a system that works.",
+    "niche-2-reason-4": " You believe you're not capable of making a change.",
+    "niche-2-explanation-4": " You want to start training, you've even researched it and know its benefits, but you think it's too hard work for you. Here the secret is in adapting the routines to you, not in adapting yourself to the routines. Many times we see that they give us a fixed number of repetitions or weight to use that, simply, for us may be too much. We have to play within a range that challenges us and makes us grow, but doesn't make us feel miserable.",
     "features-section-title": "You execute, we guarantee...",
     "feature-1-title": "More rest than exercise",
     "feature-1-description": "Science sais that rest is crucial for muscle growth. Different studies suggest rest times of 1 - 5 minutes between sets. Choose the most suitable for you.",
