Added login and signup buttons. Modified text of "change language" button to show current language. Modified favicon.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,8 @@
     "nav-landing-2": "Benefits",
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
+    "nav-landing-login": "Log in",
+    "nav-landing-signup": "Sign up",
     "niche-section-title": "Your mindset",
     "niche-1-title": " Guaranteed results if ...",
     "niche-1-reason-1": " You're willing to leave excuses behind.",
