--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -7,6 +7,8 @@
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
+    "nav-landing-login": "Iniciar sesión",
+    "nav-landing-signup": "Regístrate",
     "niche-section-title": "Tu mentalidad",
     "niche-1-title": "Resultados asegurados si ...",
     "niche-1-reason-1": "Estás dispuesto a dejar las excusas atrás.",
