First iteration of landing page finished

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,7 +3,7 @@
     "hero-subtitle-1": "makes you",
     "hero-subtitle-2": "strong",
     "hero-button-text": "Improve your life!",
-    "nav-landing-1": "Your future",
+    "nav-landing-1": "You",
     "nav-landing-2": "Benefits",
     "nav-landing-3": "Features",
     "nav-landing-4": "Testimonials",
@@ -55,5 +55,10 @@
     "benefit-3-cta": "Become stronger!",
     "benefit-4-title": "Enjoy!",
     "benefit-4-items": "Healthier, stronger, more confident;Results beyond aesthetic;Affect others positively",
-    "benefit-4-cta": "Gain superpowers!"
+    "benefit-4-cta": "Gain superpowers!",
+    "testimonials-section-title": "What people say",
+    "testimonial-1-text": "For a long time, I wanted to gain /muscle mass/, but I didn't know where to start. Fortunately, a friend with experience in the subject guided me every step of the way. He explained the /basics/ of hypertrophy: from how to structure my workouts and adjust the sets and reps, to how to focus on the principle of 'one more rep'.",
+    "testimonial-1-author-title": "Over 1 year of consistency",
+    "testimonial-2-text": " Now I follow a complete routine that includes both basic exercises and specific ones for each muscle group, and that constantly challenges me. I'm very /grateful/ to have someone who has shown me the way in such a practical and motivating way.",
+    "testimonial-2-author-title": "Exceeding goals"
 }
