--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -3,7 +3,7 @@
     "hero-subtitle-1": "desata tu",
     "hero-subtitle-2": "fortaleza",
     "hero-button-text": "¡Mejora tu vida!",
-    "nav-landing-1": "Tu futuro",
+    "nav-landing-1": "Tú",
     "nav-landing-2": "Beneficios",
     "nav-landing-3": "Características",
     "nav-landing-4": "Testimonios",
@@ -55,5 +55,10 @@
     "benefit-3-cta": " ¡Vuélvete más fuerte!",
     "benefit-4-title": "¡Vive!",
     "benefit-4-items": " Más saludable, más fuerte, más confiado; Resultados más allá de lo estético; Afecta positivamente a los demás",
-    "benefit-4-cta": " ¡Obtén superpoderes!"
+    "benefit-4-cta": " ¡Obtén superpoderes!",
+    "testimonials-section-title": "Lo que la gente dice",
+    "testimonial-1-text": "Durante mucho tiempo, quise ganar /masa muscular/, pero no sabía por dónde empezar. Afortunadamente, un amigo con experiencia en el tema me guió en cada paso. Me explicó los /fundamentos/ de la hipertrofia: desde cómo estructurar mis entrenamientos y ajustar las series y repeticiones, hasta cómo enfocarme en el principio de “una repetición más”.",
+    "testimonial-1-author-title": "Más de 1 año de consistencia",
+    "testimonial-2-text": "Ahora sigo una rutina completa que incluye tanto ejercicios básicos como específicos para cada grupo muscular, y que me reta constantemente. Estoy muy /agradecido/ de tener a alguien que me haya mostrado el camino de forma tan práctica y motivadora.",
+    "testimonial-2-author-title": "Superando metas"
 }
