Translated register form

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -60,5 +60,14 @@
     "testimonial-1-text": "For a long time, I wanted to gain /muscle mass/, but I didn't know where to start. Fortunately, a friend with experience in the subject guided me every step of the way. He explained the /basics/ of hypertrophy: from how to structure my workouts and adjust the sets and reps, to how to focus on the principle of 'one more rep'.",
     "testimonial-1-author-title": "Over 1 year of consistency",
     "testimonial-2-text": " Now I follow a complete routine that includes both basic exercises and specific ones for each muscle group, and that constantly challenges me. I'm very /grateful/ to have someone who has shown me the way in such a practical and motivating way.",
-    "testimonial-2-author-title": "Exceeding goals"
+    "testimonial-2-author-title": "Exceeding goals",
+    "register-form-title": "Create an account",
+    "register-form-subtitle": "Already have an account?",
+    "register-form-subtitle-link": "Log in",
+    "register-form-username-label": "Username",
+    "register-form-email-label": "Email",
+    "register-form-password-label": "Password",
+    "register-form-terms-label": "I accept the terms and conditions",
+    "register-form-submit-button": "Create account",
+    "register-form-or-register-with-text": "Or register with"
 }
