Styling login form

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -69,5 +69,8 @@
     "register-form-password-label": "Password",
     "register-form-terms-label": "I accept the terms and conditions",
     "register-form-submit-button": "Create account",
-    "register-form-or-register-with-text": "Or register with"
+    "register-form-or-register-with-text": "Or register with",
+    "login-form-title": "Log in to your account",
+    "login-form-subtitle": "Welcome back! Select method to log in:",
+    "login-form-or-login-with-text": "Or continue with email"
 }
