--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -72,5 +72,12 @@
     "register-form-or-register-with-text": "O regístrate con",
     "login-form-title": "Inicia sesión en tu cuenta",
     "login-form-subtitle": "¡Bienvenido de nuevo! Selecciona el método para iniciar sesión:",
-    "login-form-or-login-with-text": "O continúa con email"
+    "login-form-or-login-with-text": "O continúa con email",
+    "login-form-email-label": "Email",
+    "login-form-password-label": "Contraseña",
+    "login-form-remember-me-text": "Recuérdame",
+    "login-form-submit-button": "Iniciar sesión",
+    "login-form-forgot-password-text": "¿Olvidaste tu contraseña?",
+    "login-form-dont-have-account-text": "¿No tienes una cuenta?",
+    "login-form-create-account-text": "Crea una"
 }
