Search bar component

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -83,5 +83,7 @@
     "nav-app-dashboard": "Dashboard",
     "nav-app-templates": "Templates",
     "nav-app-exercises": "Exercises",
-    "nav-app-logout": "Log out"
+    "nav-app-logout": "Log out",
+    "button-new-exercise": "New exercise",
+    "button-search-placeholder": "Search"
 }
