--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -94,5 +94,8 @@
     "template-creator-available-exercises-text": "Available exercises",
     "template-creator-used-exercises-text": "Selected exercises",
     "template-creator-create-template-text": "Create template",
-    "template-creator-placeholder-sets": "Sets"
+    "template-creator-placeholder-sets": "Sets",
+    "tooltip-weight": "Weight",
+    "tooltip-reps": "Reps",
+    "tooltip-day": "Day"
 }
