--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -97,5 +97,10 @@
     "template-creator-placeholder-sets": "Series",
     "tooltip-weight": "Peso",
     "tooltip-reps": "Repeticiones",
-    "tooltip-day": "Día"
+    "tooltip-day": "Día",
+    "home-page-recent-workouts": "Entrenamientos recientes",
+    "home-page-weight-progress": "Progreso de peso",
+    "home-page-todays-weight": "Peso actual",
+    "home-page-last-weight-placeholder": "Ayer:",
+    "home-page-submit-weight": "Enviar"
 }
